add forms and update cors
